--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 3.25)
 
 set( CMAKE_CXX_COMPILER g++)
 set( CMAKE_C_COMPILER gcc)
-project(RunningAverage)
+#project(RunningAverage)
+#project(stRev)
+#project(palin)
+project(queue)
 
-add_executable(RunningAverage RunningAverage.cpp)
+#add_executable(RunningAverage RunningAverage.cpp)
+#add_executable(stRev stringReverse.cpp)
+#add_executable(Palin Palindrome.cpp)
+add_executable(queue queue.cpp)
